<resources>
    <string name="app_name">GreenPap Mockup</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Admin Login</string>
    <string name="menu_slideshow">Tree Site Matching</string>
    <string name="menu_tools">Orders</string>
    <string name="menu_share">Profile</string>
    <string name="menu_send">Notifications</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cart</string>
    <string name="title_notifications">Search</string>

</resources>



