<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/match"
            android:title="@string/menu_slideshow" />



    </group>

    <item android:title="ACCOUNT">
        <menu>



            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/person"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/orders"
                android:title="@string/menu_tools" />

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/menu_send" />


        </menu>
    </item>



    <item android:title="Admin Account">

        <menu>

            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/admin"
                android:title="@string/menu_gallery" />
        </menu>



    </item>

</menu>
